[tool.poetry]
name = "gpa_plot"
version = "0.1.0"
description = "Plotting BUAA GPA Algorithm"
authors = ["Daniel <danielw10001@gmail.com>"]
license = "MIT & Anti996"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
